@@ -14,6 +14,7 @@
 - API Addition: Added AndroidLiveWallpaper.notifyColorsChanged() to communicate visually significant colors back to the wallpaper engine.
 - API Change: AssetManager invokes the loaded callback when an asset is unloaded from the load queue if the asset is already loaded.
 - GWT: changed audio backend to WebAudio API. Now working on mobiles, pitch implemented. Configuration change: preferFlash removed. When updating existing projects, you can remove the soundmanager js files from your webapp folder and the references to it from index.html
+- GWT added possibility to lazy load assets via AssetManager instead of preload them before game start. See GWT specifics wiki article for more information.
 - Added support for Linux ARM builds.
 	- 32-bit: ARMv7/armhf
 	- 64-bit: ARMv8/AArch64
